# unnamed-horse-game

./: .gitignore  CMakeLists.txt  README.md  a.out  run.sh
docs/: base-coats.md  coat-codes.md  common-codes.md
source/: Main.cpp
source/core/: Main.cs
source/headers/: Equine.hpp  EquineEnums.hpp  Equipment.hpp  EquipmentEnums.hpp  EquipmentStats.hpp  Health.cpp  Health.hpp  Horse.hpp  HorseVariant.hpp  Mundane.hpp  TeraHorse.hpp
source/objects/: Equine.cpp  Equipment.cpp  EquipmentStats.cpp  Health.cpp  Horse.cpp  Mundane.cpp  TeraHorse.cpp  VariantEnums.cpp
src/: main.cpp
src/classes/: baseCoat.cpp  coat.cpp  coatCode.cpp  dilution.cpp  dilutionCoat.cpp  equid.cpp  fadeCoat.cpp  gene.cpp  printForm.cpp  printForm.hpp  whiteMarkCoat.cpp
src/classes/coats/: baseCoat.cpp  coat.cpp  coatCode.cpp  dilutionCoat.cpp  fadeCoat.cpp  whiteMarkCoat.cpp
src/classes/equines/: equid.cpp
src/classes/include/: baseCoat.hpp  coat.hpp  coatCode.hpp  coatEnums.hpp  dilutedCoat.hpp  dilutionCoat.hpp  fadeCoat.hpp  gene.hpp  whiteMarkCoat.hpp
src/classes/include/coats/: baseCoat.hpp  coat.hpp  coatCode.hpp  dilutionCoat.hpp  fadeCoat.hpp  whiteMarkCoat.hpp
src/classes/include/coats/enums/: presetCoats.hpp
src/classes/include/equines/: equid.hpp
src/classes/include/utilities/: printForm.hpp
src/classes/utilities/: printForm.cpp
src/opengl/: opengl.cpp  opengl.hpp
